uppdatera dark mode för att fixa fel

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -57,14 +57,4 @@ p {
         background-color: black;
         color: $detail-color;
     }
-    #navMenu {
-        background-color: black;
-         }
-    #navMenu ul li a:link, a:visited {
-                    color:$detail-color;
-                }
-    #menuBtn {
-        background-color: black;
-        color:$detail-color;
-    }
 }
